# nuttymoves_adelino

./: .gitignore  AGENTS.md  CUSTOM.md  Cargo.toml
.claude/: CLAUDE.md
deployment/: config.py  observation_builder.py  policy_runner.py  requirements.txt
deployment/tests/: conftest.py  test_config.py  test_observation_builder.py
embodiment/: Adelino.blend  export_config.json  mjcf_config.json
embodiment/v1/: kinematics.json
embodiment/v1/mjcf/: adelino.xml
embodiment/v1/usd/: .asset_hash  adelino.usd  adelino_fixed.usd  config.yaml
embodiment/v1/usd/configuration/: adelino_base.usd  adelino_physics.usd  adelino_robot.usd  adelino_sensor.usd
firmware/: config.h  firmware.ino  imu.h  led_matrix.h  protocol.h
firmware/test_led/: test_led.ino
guides/: 01-installation-setup.md  02-adelino-control.md  03-vimu.md
scripts/: list_envs.py
scripts/rsl_rl/: cli_args.py  play.py  play_interactive.py  train.py
source/adelino_lab/: setup.py
source/adelino_lab/adelino_lab/: __init__.py
source/adelino_lab/adelino_lab/tasks/locomotion/: __init__.py  balance_env_cfg.py
source/adelino_lab/adelino_lab/tasks/locomotion/agents/: __init__.py  rsl_rl_ppo_cfg.py
source/adelino_lab/adelino_lab/tasks/locomotion/mdp/: __init__.py  (+5 more)
source/adelino_lab/config/: extension.toml
specs/: epic0_environment_setup.md  epic1_robot_definition.md  epic2_simulation_validation.md  epic3_training_pipeline.md  epic4_deployment_infrastructure.md  epic5_vimu_keypoint_detection.md  index.md  project_overview.md
standalone/: Cargo.toml
standalone/src/: adelino_config.rs  main.rs
