[package]
name = "adelino-standalone"
version = "0.1.0"
edition = "2021"
description = "Standalone controller for the Adelino 5-DOF servo robot"

[dependencies]
arduino-controller = { path = "../../../controllers/arduino-controller" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = "0.28"
